# discord-bot

./: Makefile  README.md  pyproject.toml
dbot/: __main__.py  app.py
dbot/controller/: client.py  command.py
dockerfiles/: Dockerfile
